fix: mobile display of pricing page overflowing, adjusted size of table

--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@ td {
     font-size: 12px;
   }
   .pricing__container {
-    height: 100%;
+    height: 80%;
   }
   .pricing_table__container{
     height: 100%;
